# attempt_opengl

./: Cargo.toml  README.md  flake.nix
src/: gl_glfw.rs  main.rs
